[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Screens/Board-PVP.gd" type="Script" id=1]
[ext_resource path="res://asset/grid.png" type="Texture" id=2]
[ext_resource path="res://src/Cell.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Screens/Client.gd" type="Script" id=4]
[ext_resource path="res://src/Screens/GameManager.gd" type="Script" id=5]

[node name="BoardPVP" type="Node2D"]
position = Vector2( 211.171, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1.38657, 1.38657 )
texture = ExtResource( 2 )
centered = false

[node name="Cell1" parent="." instance=ExtResource( 3 )]
position = Vector2( 91.7682, 103.522 )
scale = Vector2( 1.25, 1.25 )

[node name="Cell2" parent="." instance=ExtResource( 3 )]
position = Vector2( 299.799, 103.522 )
scale = Vector2( 1.25, 1.25 )

[node name="Cell3" parent="." instance=ExtResource( 3 )]
position = Vector2( 506.36, 103.522 )
scale = Vector2( 1.25, 1.25 )

[node name="Cell4" parent="." instance=ExtResource( 3 )]
position = Vector2( 91.7682, 297.732 )
scale = Vector2( 1.25, 1.25 )

[node name="Cell5" parent="." instance=ExtResource( 3 )]
position = Vector2( 299.253, 297.732 )
scale = Vector2( 1.25, 1.25 )

[node name="Cell6" parent="." instance=ExtResource( 3 )]
position = Vector2( 506.36, 297.732 )
scale = Vector2( 1.25, 1.25 )

[node name="Cell7" parent="." instance=ExtResource( 3 )]
position = Vector2( 91.7681, 491.522 )
scale = Vector2( 1.25, 1.25 )

[node name="Cell8" parent="." instance=ExtResource( 3 )]
position = Vector2( 299.253, 491.522 )
scale = Vector2( 1.25, 1.25 )

[node name="Cell9" parent="." instance=ExtResource( 3 )]
position = Vector2( 506.36, 491.522 )
scale = Vector2( 1.25, 1.25 )

[node name="Client" type="Node" parent="."]
script = ExtResource( 4 )

[node name="GameManager" type="Node" parent="."]
script = ExtResource( 5 )

[connection signal="piece_placed" from="." to="Client" method="_on_piece_placed"]
[connection signal="mouse_entered" from="Cell3" to="." method="_on_mouse_entered"]
[connection signal="new_piece_placed" from="Client" to="." method="_on_new_piece_placed"]
[connection signal="new_turn" from="Client" to="." method="_on_turn_changed"]
